chore: update to non-beta version of guess-json-shapes

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   },
   "dependencies": {
     "generate-runtypes": "^2.0.1",
-    "guess-json-shape": "^0.0.1-3"
+    "guess-json-shape": "^1.0.0"
   }
 }
