--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "~26.0.22",
+    "@types/jest": "~28.1.8",
     "@types/node": "~14.14.37",
     "@typescript-eslint/eslint-plugin": "~4.19.0",
     "@typescript-eslint/parser": "~4.21.0",
@@ -23,10 +23,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "~24.3.4",
     "husky": "^6.0.0",
-    "jest": "~26.6.3",
+    "jest": "~28.1.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "~28.0.8",
     "typescript": "^4.2.3"
   },
   "dependencies": {
